@@ -22,26 +22,27 @@ import static com.example.mochamoneys.security.user.Permission.MANAGER_UPDATE;
 public enum Role {
 
     USER(Collections.emptySet()),
-    ADMIN(
-            Set.of(
-                    ADMIN_READ,
-                    ADMIN_UPDATE,
-                    ADMIN_DELETE,
-                    ADMIN_CREATE,
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    ),
-    MANAGER(
-            Set.of(
-                    MANAGER_READ,
-                    MANAGER_UPDATE,
-                    MANAGER_DELETE,
-                    MANAGER_CREATE
-            )
-    )
+    ADMIN(Collections.emptySet())
+            //(
+//            Set.of(
+//                    ADMIN_READ,
+//                    ADMIN_UPDATE,
+//                    ADMIN_DELETE,
+//                    ADMIN_CREATE,
+//                    MANAGER_READ,
+//                    MANAGER_UPDATE,
+//                    MANAGER_DELETE,
+//                    MANAGER_CREATE
+//            )
+//    ),
+//    MANAGER(
+//            Set.of(
+//                    MANAGER_READ,
+//                    MANAGER_UPDATE,
+//                    MANAGER_DELETE,
+//                    MANAGER_CREATE
+//            )
+//    )
 
     ;
 
